--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://twitter.com/_piyulove" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/priyanka-bhoir" class="github"><i class="bx bxl-github"></i></a>
           <a href="http://instagram.com/_piyulove" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://join.skype.com/invite/WKp8qAXR0pXk" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/priyankabhoir1/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
