--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachleor</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> er.priyankabhoir1@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachleor of Engineering</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> Er.priyankabhoir1@gmail.com</li>
                   
                 </ul>
               </div>
