--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web Designer.</h3>
+            <h3>IT Engineer</h3>
             
             <div class="row">
               <div class="col-lg-6">
