--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h2>Priyanka Bhoir</h2>
-      <p>I'm <span class="typed" data-typed-items="IT Engineer "></span></p>
+      <p>who am i..! <span class="typed" data-typed-items="IT Engineer "></span></p>
     </div>
   </section><!-- End Hero -->
 
