--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">86%</i></span>
+              <span class="skill">Android <i class="val">86%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">97%</i></span>
+              <span class="skill">Python <i class="val">97%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -156,14 +156,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Advance Styling with Responsive Design <i class="val">80%</i></span>
+              <span class="skill"> Pentesting <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">BOOTSTRAP <i class="val">60%</i></span>
+              <span class="skill">Flutter <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -270,7 +270,7 @@
       </div>
       <div class="row">
       <div class="col-lg-6" data-aos="fade-up"> 
-               <div class="contact pb-0 ">
+               <div class="contact ">
                     <h1 class="title ">Contact Me</h1>
                     <form accept-charset="UTF-8" action="https://formspree.io/f/mknpbqzg" method="POST">
                         <p>Name</p>
