--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 6th Feb 1999</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Udemy:</strong> Flutter Api & json courese</li>
                 
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7984423265</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sarigam,India</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>NPTEL Online Certification</strong> Ethical Hacking</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>IBM:</strong> Big Data 101</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -283,7 +283,7 @@
                         <textarea id="message" name="message: " placeholder="Type your message here..." required></textarea>
                         <br/>
                         <br/>
-                        <button id="submit" class="btn submit" type="submit" value="Send message" onclick=""> Send Message</button>
+                        <button id="submit" color="blue" class="btn submit" type="submit" value="Send message" onclick=""> Send Message</button>
                         <br/>
                    </form>
                 </div>
