--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Udemy:</strong> Flutter Api & json courese</li>
                 
-                  <li><i class="icofont-rounded-right"></i> <strong>NPTEL Online Certification</strong> Ethical Hacking</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>NPTEL Certification:</strong> Ethical Hacking</li>
                   <li><i class="icofont-rounded-right"></i> <strong>IBM:</strong> Big Data 101</li>
                 </ul>
               </div>
