--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
 
    <!-- End Portfolio Section -->
 
-   <section  id="contact" class="resume">
-    
+<center>
+     <section  id="contact" class="resume">
+  </center>
     <div class="container">
       <div class="section-title">
         <h2>Contact</h2>
